--- a/src/components/History/History.module.css
+++ b/src/components/History/History.module.css
@@ -8,18 +8,19 @@
 }
 .item {
     margin: 5px 0px;
-    padding: 0px 10px;
+    padding: 5px 10px;
     border-radius: 5px;
     display: flex;
 }
 .text {
     flex-grow: 1;
+    font-weight: 200;
 }
 .amount {
-    margin: 0px 5px;
+    margin: 0px 10px;
 }
 .item button {
-    margin: 0px 5px;
+    margin: 0px 10px;
     border: none;
     background: none;
     outline: none;
