--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,6 +9,15 @@
 }
 .title {
     margin: 10px 0px;
+    display: flex;
+    align-items: center;
+}
+.title h1 {
+    margin: 0px 5px;
+}
+.title img {
+    margin: 0px 5px;
+    width: 50px;
 }
 .balance {
     margin: 10px 0px;
@@ -38,4 +47,25 @@
 }
 .expenseCard h4:nth-child(2) {
     color: var(--expense-text-color);
+}
+
+@media screen and (max-width: 480px) {
+    .title {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .title h1 {
+        margin: 5px 0px;
+    }
+    .title img {
+        margin: 5px 0px;
+        width: 50px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .title img {
+        margin: 5px 0px;
+        width: 40px;
+    }
 }
