--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,3 +4,12 @@
     align-items: center;
     justify-content: center;
 }
+.credit {
+    bottom: 5px;
+    left: 5px;
+    font-size: 8px;
+    align-self: flex-start;
+}
+.credit a {
+    text-decoration: none;
+}
